clusters/calops/namespaces/saas/resources/catcher-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    prom: monitor
  name: catcher
  namespace: saas
spec:
  clusterIP: None
  ports:
  - name: metrics
    port: 9102
    protocol: TCP
    targetPort: 9102
  selector:
    app: catcher
  sessionAffinity: None
  type: ClusterIP
