clusters/calops/namespaces/saas/resources/coach-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    prom: monitor
  name: coach
  namespace: saas
spec:
  ports:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: metrics
    port: 9102
    protocol: TCP
    targetPort: 9102
  selector:
    app: coach
  sessionAffinity: None
  type: ClusterIP
